--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,11 @@
 # Django Configuration
 DEBUG=False
-SECRET_KEY=your-secret-key-here-change-this-in-production
-ALLOWED_HOSTS=your-heroku-app.herokuapp.com,localhost,127.0.0.1
+SECRET_KEY="django-insecure-1^-iir7!mnx80ofg=%ebz%dhrer^@vor%zoy99oit*n2j)p!ts"
+ALLOWED_HOSTS=your-heroku-app.herokuapp.com,localhost,127.0.0.1,.vercel.app
 
 # CORS Configuration
 CORS_ALLOW_ALL_ORIGINS=False
-CORS_ALLOWED_ORIGINS=https://your-vercel-app.vercel.app,http://localhost:3000,http://127.0.0.1:3000
+CORS_ALLOWED_ORIGINS=https://smart-solar-react-frontend.vercel.app,http://localhost:3000,http://127.0.0.1:3000
 
 # Database (optional - using SQLite by default)
 # DATABASE_URL=postgresql://user:password@host:port/database
