--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,7 @@
 {
   "version": 2,
   "buildCommand": "python build.py",
+  "outputDirectory": ".vercel",
   "functions": {
     "api/index.py": {
       "maxDuration": 30
