--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,6 @@ Werkzeug>=3.0
 gunicorn>=21.2.0
 whitenoise>=6.6.0
 python-decouple>=3.8
+psycopg2-binary>=2.9.7
+dj-database-url>=2.2.0
+psycopg2-binary>=2.9
