--- a/requirements.txt
+++ b/requirements.txt
@@ -13,5 +13,5 @@ Werkzeug>=3.0
 gunicorn>=21.2.0
 whitenoise>=6.6.0
 python-decouple>=3.8
-psycopg2-binary
+psycopg2-binary==2.9.9
 dj-database-url>=2.2.0
