--- a/requirements.txt
+++ b/requirements.txt
@@ -13,5 +13,6 @@ Werkzeug>=3.0
 gunicorn>=21.2.0
 whitenoise>=6.6.0
 python-decouple>=3.8
-psycopg2cffi==2.9.0
+psycopg[binary]>=3.1
+psycopg2-binary>=2.9
 dj-database-url>=2.2.0
