Update buildCommand in vercel.json to use 'uv python' for improved execution

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
-  "buildCommand": "python build.py",
+  "buildCommand": "uv python build.py",
   "installCommand": "uv pip install --system -r requirements.txt --target .vercel_python_packages",
   "outputDirectory": "staticfiles",
   "functions": {
