--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+
 django>=4.2
 djangorestframework>=3.12
 djangorestframework-simplejwt
@@ -13,6 +14,5 @@ Werkzeug>=3.0
 gunicorn>=21.2.0
 whitenoise>=6.6.0
 python-decouple>=3.8
-psycopg>=3.1
-psycopg-binary>=3.1
+psycopg[binary]>=3.1
 dj-database-url>=2.2.0
