--- a/requirements.txt
+++ b/requirements.txt
@@ -14,5 +14,5 @@ Werkzeug>=3.0
 gunicorn>=21.2.0
 whitenoise>=6.6.0
 python-decouple>=3.8
-psycopg>=3.1
+psycopg2-binary>=2.9
 dj-database-url>=2.2.0
