--- a/requirements.txt
+++ b/requirements.txt
@@ -23,3 +23,7 @@ drf-spectacular>=0.27.0
 # Security
 PyJWT>=2.8.0
 django-ratelimit>=4.1.0
+
+# File Storage
+django-storages>=1.14
+boto3>=1.28  # For AWS S3 storage
